# aiogram-pagination

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
aiogram_pagination/: __init__.py
aiogram_pagination/callback_chain/: __init__.py  base_callback_chain.py  callback.py  callback_chain.py
aiogram_pagination/callback_chain/callback_stack/: callback_stack.py
aiogram_pagination/callback_chain/compression/: __init__.py  compressed_callback_chain.py
aiogram_pagination/callback_chain/compression/callback_storage/: __init__.py  base_storage.py  builtin_storage.py  redis_storage.py  sqlite_storage.py
aiogram_pagination/callback_stack/: __init__.py  abbreviated_callback_stack.py  abstract_callback_stack.py  callback_stack.py  simple_callback_stack.py
aiogram_pagination/callback_storage/: __init__.py  abstract_storage.py  builtin_storage.py  redis_storage.py  sqlite_storage.py
aiogram_pagination/data/: callback_configurator.py  config.json  config.py  loader.py
aiogram_pagination/on_startup/: callback_daemon.py  on_startup.py
aiogram_pagination/utils/: callback_stack_factory.py  counter.py
aiogram_pagination/utils/compression/: counter.py
aiogram_pagination/utils/db_api/: engine.py
aiogram_pagination/utils/misc/: overloading.py
callback_storage/: __init__.py  abstract_storage.py  builtin_storage.py  sqlite_storage.py
data/: callback_configurator.py  config.json  loader.py
on_startup/: __init__.py  callback_daemon.py
utils/: counter.py  custom_notation.py  singlton.py
utils/db_api/: schemas.py
