[tool.poetry]
name = "aiogram-pagination"
version = "0.1.0"
description = ""
authors = ["altcode <cosmosx1328@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
peewee = "^3.14.8"
redis = "^4.1.1"
aiogram = "^2.18"
bestconfig = "^1.3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
